tratamento dos dados

--- a/notebooks/primeira_abordagem.ipynb
+++ b/notebooks/primeira_abordagem.ipynb
@@ -55,23 +55,14 @@
     "# Recuperando os dados das estações dentro da Caatinga nos anos de 2000 a 2022\n",
     "df_meta_dados = fetch_inmet_data([2000,2001,2002,2003,2004,2005,2006,2007,2008,\n",
     "                                  2009,2010,2011,2012,2013,2014,2015,2016,2017,\n",
-    "                                  2018,2019,2020,2021,2022])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "                                  2018,2019,2020,2021,2022])\n",
     "# Salvar os dados em um arquivo CSV\n",
-    "df_meta_dados.to_csv('../dados/df_meta_dados_serie.csv', index=False)\n",
-    "df_meta_dados = pd.read_csv('../dados/df_meta_dados_serie.csv')"
+    "df_meta_dados.to_csv('../dados/df_meta_dados_serie.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -283,13 +274,35 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "df_meta_dados = pd.read_csv('../dados/df_meta_dados_serie.csv')\n",
     "df_meta_dados.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2009, 2017, 2015, 2016, 2021, 2010, 2014, 2018, 2012, 2022, 2020,\n",
+       "       2019, 2011, 2013, 2008, 2006, 2004, 2003, 2005, 2007], dtype=int64)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_meta_dados['ano'].unique()"
    ]
   },
   {
