--- a/notebooks/primeira_abordagem.ipynb
+++ b/notebooks/primeira_abordagem.ipynb
@@ -23,6 +23,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import glob\n",
     "import geopandas as gpd\n",
     "import requests\n",
     "import rasterio\n",
@@ -36,252 +37,6 @@
    "metadata": {},
    "source": [
     "# Temperatura ao decorrer dos anos"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Downloading: 100%|██████████| 10566120/10566120 [53:52<00:00, 3268.40rows/s]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Recuperando os dados das estações dentro da Caatinga nos anos de 2000 a 2022\n",
-    "df_meta_dados = fetch_inmet_data([2000,2001,2002,2003,2004,2005,2006,2007,2008,\n",
-    "                                  2009,2010,2011,2012,2013,2014,2015,2016,2017,\n",
-    "                                  2018,2019,2020,2021,2022])\n",
-    "# Salvar os dados em um arquivo CSV\n",
-    "df_meta_dados.to_csv('../dados/df_meta_dados_serie.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>ano</th>\n",
-       "      <th>mes</th>\n",
-       "      <th>data</th>\n",
-       "      <th>hora</th>\n",
-       "      <th>id_estacao</th>\n",
-       "      <th>precipitacao_total</th>\n",
-       "      <th>pressao_atm_hora</th>\n",
-       "      <th>pressao_atm_max</th>\n",
-       "      <th>pressao_atm_min</th>\n",
-       "      <th>radiacao_global</th>\n",
-       "      <th>...</th>\n",
-       "      <th>temperatura_max</th>\n",
-       "      <th>temperatura_min</th>\n",
-       "      <th>temperatura_orvalho_max</th>\n",
-       "      <th>temperatura_orvalho_min</th>\n",
-       "      <th>umidade_rel_max</th>\n",
-       "      <th>umidade_rel_min</th>\n",
-       "      <th>umidade_rel_hora</th>\n",
-       "      <th>vento_direcao</th>\n",
-       "      <th>vento_rajada_max</th>\n",
-       "      <th>vento_velocidade</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2009</td>\n",
-       "      <td>11</td>\n",
-       "      <td>2009-11-05</td>\n",
-       "      <td>20:00:00</td>\n",
-       "      <td>A358</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>991.1</td>\n",
-       "      <td>991.2</td>\n",
-       "      <td>991.1</td>\n",
-       "      <td>639.4</td>\n",
-       "      <td>...</td>\n",
-       "      <td>37.4</td>\n",
-       "      <td>35.5</td>\n",
-       "      <td>12.5</td>\n",
-       "      <td>11.2</td>\n",
-       "      <td>25.0</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>24.0</td>\n",
-       "      <td>51.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>1.9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2017</td>\n",
-       "      <td>10</td>\n",
-       "      <td>2017-10-23</td>\n",
-       "      <td>19:00:00</td>\n",
-       "      <td>A365</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>971.9</td>\n",
-       "      <td>972.1</td>\n",
-       "      <td>971.8</td>\n",
-       "      <td>1915.8</td>\n",
-       "      <td>...</td>\n",
-       "      <td>37.3</td>\n",
-       "      <td>36.3</td>\n",
-       "      <td>7.9</td>\n",
-       "      <td>6.4</td>\n",
-       "      <td>17.0</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>112.0</td>\n",
-       "      <td>8.7</td>\n",
-       "      <td>3.1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2017</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2017-03-05</td>\n",
-       "      <td>20:00:00</td>\n",
-       "      <td>A366</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>954.8</td>\n",
-       "      <td>954.8</td>\n",
-       "      <td>954.6</td>\n",
-       "      <td>1276.4</td>\n",
-       "      <td>...</td>\n",
-       "      <td>34.4</td>\n",
-       "      <td>33.7</td>\n",
-       "      <td>12.1</td>\n",
-       "      <td>9.2</td>\n",
-       "      <td>26.0</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>178.0</td>\n",
-       "      <td>7.5</td>\n",
-       "      <td>4.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2015</td>\n",
-       "      <td>9</td>\n",
-       "      <td>2015-09-20</td>\n",
-       "      <td>22:00:00</td>\n",
-       "      <td>A343</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>984.2</td>\n",
-       "      <td>984.2</td>\n",
-       "      <td>983.8</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>35.6</td>\n",
-       "      <td>34.2</td>\n",
-       "      <td>8.4</td>\n",
-       "      <td>7.4</td>\n",
-       "      <td>21.0</td>\n",
-       "      <td>18.0</td>\n",
-       "      <td>21.0</td>\n",
-       "      <td>128.0</td>\n",
-       "      <td>5.4</td>\n",
-       "      <td>3.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2015</td>\n",
-       "      <td>8</td>\n",
-       "      <td>2015-08-29</td>\n",
-       "      <td>23:00:00</td>\n",
-       "      <td>A337</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>956.7</td>\n",
-       "      <td>956.7</td>\n",
-       "      <td>955.9</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>28.8</td>\n",
-       "      <td>27.0</td>\n",
-       "      <td>2.7</td>\n",
-       "      <td>1.9</td>\n",
-       "      <td>20.0</td>\n",
-       "      <td>19.0</td>\n",
-       "      <td>20.0</td>\n",
-       "      <td>127.0</td>\n",
-       "      <td>4.4</td>\n",
-       "      <td>1.3</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 22 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    ano  mes        data      hora id_estacao  precipitacao_total  \\\n",
-       "0  2009   11  2009-11-05  20:00:00       A358                 0.0   \n",
-       "1  2017   10  2017-10-23  19:00:00       A365                 0.0   \n",
-       "2  2017    3  2017-03-05  20:00:00       A366                 0.0   \n",
-       "3  2015    9  2015-09-20  22:00:00       A343                 0.0   \n",
-       "4  2015    8  2015-08-29  23:00:00       A337                 0.0   \n",
-       "\n",
-       "   pressao_atm_hora  pressao_atm_max  pressao_atm_min  radiacao_global  ...  \\\n",
-       "0             991.1            991.2            991.1            639.4  ...   \n",
-       "1             971.9            972.1            971.8           1915.8  ...   \n",
-       "2             954.8            954.8            954.6           1276.4  ...   \n",
-       "3             984.2            984.2            983.8              NaN  ...   \n",
-       "4             956.7            956.7            955.9              0.0  ...   \n",
-       "\n",
-       "   temperatura_max  temperatura_min  temperatura_orvalho_max  \\\n",
-       "0             37.4             35.5                     12.5   \n",
-       "1             37.3             36.3                      7.9   \n",
-       "2             34.4             33.7                     12.1   \n",
-       "3             35.6             34.2                      8.4   \n",
-       "4             28.8             27.0                      2.7   \n",
-       "\n",
-       "   temperatura_orvalho_min  umidade_rel_max  umidade_rel_min  \\\n",
-       "0                     11.2             25.0             22.0   \n",
-       "1                      6.4             17.0             16.0   \n",
-       "2                      9.2             26.0             22.0   \n",
-       "3                      7.4             21.0             18.0   \n",
-       "4                      1.9             20.0             19.0   \n",
-       "\n",
-       "   umidade_rel_hora  vento_direcao  vento_rajada_max  vento_velocidade  \n",
-       "0              24.0           51.0               5.0               1.9  \n",
-       "1              16.0          112.0               8.7               3.1  \n",
-       "2              22.0          178.0               7.5               4.0  \n",
-       "3              21.0          128.0               5.4               3.2  \n",
-       "4              20.0          127.0               4.4               1.3  \n",
-       "\n",
-       "[5 rows x 22 columns]"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_meta_dados = pd.read_csv('../dados/df_meta_dados_serie.csv')\n",
-    "df_meta_dados.head()"
    ]
   },
   {
@@ -302,7 +57,32 @@
     }
    ],
    "source": [
-    "df_meta_dados['ano'].unique()"
+    "path = '../dados/estacoes'  \n",
+    "all_files = glob.glob(path + \"/*.csv\")  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_data = []\n",
+    "\n",
+    "for filename in all_files:\n",
+    "    df = pd.read_csv(filename, index_col=None, header=0)\n",
+    "    all_data.append(df)\n",
+    "\n",
+    "combined_data = pd.concat(all_data, axis=0, ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "combined_data.head()"
    ]
   },
   {
