criar a segmentacao das estacoes

--- a/notebooks/preprocessamento.ipynb
+++ b/notebooks/preprocessamento.ipynb
@@ -629,6 +629,48 @@
    "outputs": [
     {
      "data": {
+      "text/plain": [
+       "ano                              0\n",
+       "mes                              0\n",
+       "data                             0\n",
+       "hora                             0\n",
+       "id_estacao                       0\n",
+       "precipitacao_total          223159\n",
+       "pressao_atm_hora            145676\n",
+       "pressao_atm_max             146370\n",
+       "pressao_atm_min             146373\n",
+       "radiacao_global             394729\n",
+       "temperatura_bulbo_hora      147828\n",
+       "temperatura_orvalho_hora    182632\n",
+       "temperatura_max             148492\n",
+       "temperatura_min             148496\n",
+       "temperatura_orvalho_max     184453\n",
+       "temperatura_orvalho_min     184468\n",
+       "umidade_rel_max             176355\n",
+       "umidade_rel_min             176080\n",
+       "umidade_rel_hora            174502\n",
+       "vento_direcao               184662\n",
+       "vento_rajada_max            185800\n",
+       "vento_velocidade            179944\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_meta_dados.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -836,7 +878,7 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -847,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1066,7 +1108,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1081,6 +1123,47 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "mes                         0\n",
+       "hora                        0\n",
+       "precipitacao_total          0\n",
+       "pressao_atm_hora            0\n",
+       "pressao_atm_max             0\n",
+       "pressao_atm_min             0\n",
+       "radiacao_global             0\n",
+       "temperatura_bulbo_hora      0\n",
+       "temperatura_orvalho_hora    0\n",
+       "temperatura_max             0\n",
+       "temperatura_min             0\n",
+       "temperatura_orvalho_max     0\n",
+       "temperatura_orvalho_min     0\n",
+       "umidade_rel_max             0\n",
+       "umidade_rel_min             0\n",
+       "umidade_rel_hora            0\n",
+       "vento_direcao               0\n",
+       "vento_rajada_max            0\n",
+       "vento_velocidade            0\n",
+       "dia                         0\n",
+       "id_estacao_encoded          0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isnull().sum()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1089,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1137,7 +1220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1349,7 +1432,7 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1362,22 +1445,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "mes                              0\n",
+       "hora                             0\n",
+       "precipitacao_total          223159\n",
+       "pressao_atm_hora            145676\n",
+       "pressao_atm_max             146370\n",
+       "pressao_atm_min             146373\n",
+       "radiacao_global             394729\n",
+       "temperatura_bulbo_hora      147828\n",
+       "temperatura_orvalho_hora    182632\n",
+       "temperatura_max                  0\n",
+       "temperatura_min             148496\n",
+       "temperatura_orvalho_max     184453\n",
+       "temperatura_orvalho_min     184468\n",
+       "umidade_rel_max             176355\n",
+       "umidade_rel_min             176080\n",
+       "umidade_rel_hora            174502\n",
+       "vento_direcao               184662\n",
+       "vento_rajada_max            185800\n",
+       "vento_velocidade            179944\n",
+       "data                             0\n",
+       "id_estacao                       0\n",
+       "ano                              0\n",
+       "dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_imputed['temperatura_max'].isnull().sum()"
+    "df_imputed.isnull().sum()"
    ]
   },
   {
