--- a/notebooks/primeira_abordagem.ipynb
+++ b/notebooks/primeira_abordagem.ipynb
@@ -573,8 +573,71 @@
     ")\n",
     "\n",
     "# Remover geometrias vazias\n",
-    "gdf_voronoi_clipped = gdf_voronoi_clipped[~gdf_voronoi_clipped.is_empty]\n",
+    "gdf_voronoi_clipped = gdf_voronoi_clipped[~gdf_voronoi_clipped.is_empty]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Carregar e Filtrar Estações na Caatinga\n",
     "\n",
+    "- **`gdf_estacoes.geometry.within(caatinga.unary_union)`**: Verifica se cada ponto (estação meteorológica) está dentro do polígono da Caatinga. `unary_union` combina todos os polígonos em `caatinga` em um único polígono.\n",
+    "- **`stations_within_caatinga`**: Filtra o `GeoDataFrame` `gdf_estacoes` para manter apenas as estações que estão dentro dos limites do bioma Caatinga.\n",
+    "\n",
+    "### Extrair Coordenadas das Estações\n",
+    "\n",
+    "- **`stations_within_caatinga.geometry.x`** e **`stations_within_caatinga.geometry.y`**: Extrai as coordenadas X (longitude) e Y (latitude) das estações.\n",
+    "- **`zip(...)`**: Combina as coordenadas X e Y em pares (longitude, latitude).\n",
+    "- **`list(...)`**: Converte o objeto `zip` em uma lista de tuplas.\n",
+    "- **`np.array(...)`**: Converte a lista de tuplas em um array NumPy para facilitar o uso posterior.\n",
+    "\n",
+    "### Adicionar Pontos Fictícios ao Perímetro da Caatinga\n",
+    "\n",
+    "- **`caatinga.total_bounds`**: Calcula os limites do polígono da Caatinga, retornando as coordenadas mínimas e máximas (minx, miny, maxx, maxy) que formam um retângulo ao redor do bioma.\n",
+    "\n",
+    "- **`padding = 0.5`**: Define um valor de preenchimento para adicionar aos limites, de modo que os pontos fictícios fiquem um pouco fora do perímetro exato da Caatinga.\n",
+    "\n",
+    "- **`extra_points`**: Define quatro pontos fictícios ao redor do retângulo que circunda a Caatinga. Esses pontos ajudam a garantir que os polígonos de Voronoi sejam corretamente gerados para cobrir toda a área da Caatinga.\n",
+    "\n",
+    "### Combinar Pontos Fictícios e Coordenadas das Estações\n",
+    "\n",
+    "- **`np.vstack([...])`**: Combina as coordenadas das estações meteorológicas e os pontos fictícios em um único array 2D. `vstack` empilha verticalmente os arrays.\n",
+    "\n",
+    "### Gerar Polígonos de Voronoi\n",
+    "\n",
+    "- **`Voronoi(all_points)`**: Gera a diagrama de Voronoi com base em todos os pontos (estações + pontos fictícios). O Voronoi divide o espaço em regiões, onde cada região contém todos os pontos mais próximos de uma determinada estação.\n",
+    "\n",
+    "- **`for region in vor.regions:`**: Itera por todas as regiões do diagrama de Voronoi.\n",
+    "- **`if not -1 in region and region:`**: Verifica se a região é válida (não contém -1 e não está vazia).\n",
+    "- **`Polygon([...])`**: Cria um polígono para cada região, usando os vértices da região.\n",
+    "- **`polygons.append(polygon)`**: Adiciona o polígono à lista `polygons`.\n",
+    "\n",
+    "### Criar um GeoDataFrame com os Polígonos de Voronoi\n",
+    "\n",
+    "- **`gpd.GeoDataFrame(...)`**: Cria um novo `GeoDataFrame` com os polígonos de Voronoi. A projeção (CRS) é definida para ser a mesma das estações meteorológicas (`stations_within_caatinga.crs`).\n",
+    "\n",
+    "### Verificar e Corrigir Geometrias Inválidas\n",
+    "\n",
+    "- **`buffer(0)`**: Aplica um buffer com valor zero para cada polígono, o que é uma técnica comum para corrigir geometrias inválidas em shapefiles.\n",
+    "\n",
+    "### Clipping com a Caatinga\n",
+    "\n",
+    "- **`poly.intersection(caatinga.unary_union)`**: Recorta cada polígono de Voronoi para que ele caiba dentro do limite da Caatinga.\n",
+    "- **`if not poly.is_empty`**: Garante que apenas polígonos não vazios sejam considerados.\n",
+    "- **`gpd.GeoDataFrame(...)`**: Cria um novo `GeoDataFrame` contendo apenas os polígonos recortados.\n",
+    "\n",
+    "### Remover Geometrias Vazias\n",
+    "\n",
+    "- **`gdf_voronoi_clipped[~gdf_voronoi_clipped.is_empty]`**: Filtra o `GeoDataFrame` para remover qualquer polígono que esteja vazio.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Associar o polígono ao ID da estação mais próxima\n",
     "def find_nearest_station(polygon, stations):\n",
     "    centroid = polygon.centroid\n",
@@ -583,6 +646,19 @@
     "    return nearest_station['id_estacao']\n",
     "\n",
     "gdf_voronoi_clipped['id_estacao'] = gdf_voronoi_clipped.geometry.apply(lambda poly: find_nearest_station(poly, stations_within_caatinga))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Associar Polígonos às Estações Meteorológicas\n",
+    "\n",
+    "- **`polygon.centroid`**: Calcula o centróide (ponto médio) de um polígono.\n",
+    "- **`stations.geometry.apply(lambda x: centroid.distance(x))`**: Calcula a distância do centróide até todas as estações meteorológicas.\n",
+    "- **`stations.loc[distances.idxmin()]`**: Encontra a estação com a menor distância até o centróide.\n",
+    "- **`return nearest_station['id_estacao']`**: Retorna o ID da estação mais próxima.\n",
+    "- **`gdf_voronoi_clipped['id_estacao']`**: Cria uma nova coluna no `GeoDataFrame` com o ID da estação mais próxima para cada polígono."
    ]
   },
   {
@@ -3061,7 +3137,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.ndimage import sobel\n",
+    "\n",
+    "# Aplicar o filtro de Sobel nas séries temporais\n",
+    "sobel_temp_max = sobel(dataset_completo_A305['temperatura_max_median'], mode='constant')\n",
+    "sobel_temp_min = sobel(dataset_completo_A305['temperatura_min_median'], mode='constant')\n",
+    "sobel_vegetation = dataset_completo_A305.drop(columns=['ano', 'temperatura_max_median', 'temperatura_min_median']).apply(lambda x: sobel(x, mode='constant'))\n",
+    "\n",
+    "# Adicionar ao DataFrame para visualização\n",
+    "dataset_completo_A305['Sobel_Temperature_Max'] = sobel_temp_max\n",
+    "dataset_completo_A305['Sobel_Temperature_Min'] = sobel_temp_min\n",
+    "dataset_completo_A305 = pd.concat([dataset_completo_A305, sobel_vegetation.add_prefix('Sobel_')], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Filtro de Sobel\n",
+    "\n",
+    "O filtro de Sobel é um operador de detecção de bordas usado em processamento de imagens, mas também pode ser aplicado a séries temporais para detectar mudanças ou transições bruscas em dados. Ele calcula a derivada aproximada da função em cada ponto, destacando regiões onde a variação é mais intensa, o que corresponde a bordas em imagens ou a mudanças abruptas em séries temporais.\n",
+    "\n",
+    "- **`from scipy.ndimage import sobel`**: Importa a função `sobel` da biblioteca `scipy.ndimage`, que aplica o filtro de Sobel a arrays N-dimensional.\n",
+    "\n",
+    "- **`sobel(dataset_completo_A305['temperatura_max_median'], mode='constant')`**: Aplica o filtro de Sobel à série temporal `temperatura_max_median` (temperatura máxima mediana). O parâmetro `mode='constant'` define como as bordas da série temporal devem ser tratadas. Neste caso, os valores fora dos limites são considerados constantes.\n",
+    "- **`sobel_temp_max`**: Contém os resultados do filtro de Sobel aplicado à temperatura máxima, destacando mudanças bruscas ou transições na série temporal.\n",
+    "- **`sobel_temp_min`**: Similar ao `sobel_temp_max`, mas aplicado à temperatura mínima mediana.\n",
+    "\n",
+    "- **`dataset_completo_A305.drop(columns=['ano', 'temperatura_max_median', 'temperatura_min_median'])`**: Remove as colunas `ano`, `temperatura_max_median`, e `temperatura_min_median` do dataset, focando nas colunas relacionadas à vegetação.\n",
+    "- **`apply(lambda x: sobel(x, mode='constant'))`**: Aplica o filtro de Sobel a cada coluna restante (que são as variáveis de vegetação), uma de cada vez. O resultado é uma nova série onde as transições ou mudanças bruscas em cada variável de vegetação são destacadas.\n",
+    "- **`sobel_vegetation`**: Armazena o resultado do filtro de Sobel aplicado às variáveis de vegetação.\n",
+    "\n",
+    "- **`dataset_completo_A305['Sobel_Temperature_Max'] = sobel_temp_max`**: Cria uma nova coluna no dataset original chamada `Sobel_Temperature_Max`, que armazena os resultados do filtro de Sobel aplicado à temperatura máxima.\n",
+    "- **`dataset_completo_A305['Sobel_Temperature_Min'] = sobel_temp_min`**: Similar à linha anterior, mas para a temperatura mínima.\n",
+    "\n",
+    "- **`sobel_vegetation.add_prefix('Sobel_')`**: Adiciona o prefixo `Sobel_` aos nomes das colunas resultantes do filtro aplicado às variáveis de vegetação.\n",
+    "- **`pd.concat([...], axis=1)`**: Concatena o dataset original `dataset_completo_A305` com as novas colunas `Sobel_` derivadas das variáveis de vegetação, colocando-as lado a lado (`axis=1`)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -3076,18 +3196,6 @@
     }
    ],
    "source": [
-    "from scipy.ndimage import sobel\n",
-    "\n",
-    "# Aplicar o filtro de Sobel nas séries temporais\n",
-    "sobel_temp_max = sobel(dataset_completo_A305['temperatura_max_median'], mode='constant')\n",
-    "sobel_temp_min = sobel(dataset_completo_A305['temperatura_min_median'], mode='constant')\n",
-    "sobel_vegetation = dataset_completo_A305.drop(columns=['ano', 'temperatura_max_median', 'temperatura_min_median']).apply(lambda x: sobel(x, mode='constant'))\n",
-    "\n",
-    "# Adicionar ao DataFrame para visualização\n",
-    "dataset_completo_A305['Sobel_Temperature_Max'] = sobel_temp_max\n",
-    "dataset_completo_A305['Sobel_Temperature_Min'] = sobel_temp_min\n",
-    "dataset_completo_A305 = pd.concat([dataset_completo_A305, sobel_vegetation.add_prefix('Sobel_')], axis=1)\n",
-    "\n",
     "# Plotar os resultados para a temperatura\n",
     "plt.figure(figsize=(14, 8))\n",
     "plt.plot(dataset_completo_A305['ano'], dataset_completo_A305['Sobel_Temperature_Max'], label='Sobel Temperature Max', marker='o')\n",
@@ -3160,6 +3268,42 @@
     "for col in sobel_vegetation.columns:\n",
     "    correlation_max[col] = phase_correlation(dataset_completo_A305['temperatura_max_median'], dataset_completo_A305[col])\n",
     "    correlation_min[col] = phase_correlation(dataset_completo_A305['temperatura_min_median'], dataset_completo_A305[col])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Transformada de Fourier\n",
+    "\n",
+    "A **Transformada de Fourier (FFT - Fast Fourier Transform)** é uma técnica matemática que transforma uma função de tempo (ou espaço) em uma função de frequência. No contexto de séries temporais, a FFT é usada para decompor uma série de dados em seus componentes de frequência, revelando as frequências que compõem a série.\n",
+    "\n",
+    "- **`from numpy.fft import fft, ifft`**: Importa as funções `fft` (Fast Fourier Transform) e `ifft` (Inverse Fast Fourier Transform) da biblioteca NumPy. `fft` transforma os dados do domínio do tempo para o domínio da frequência, e `ifft` faz o processo inverso, retornando ao domínio do tempo.\n",
+    "\n",
+    "- **`def phase_correlation(series1, series2):`**: Define uma função chamada `phase_correlation` que calcula a correlação de fase entre duas séries temporais (`series1` e `series2`).\n",
+    "\n",
+    "- **`f1 = fft(series1)`**: Aplica a FFT na primeira série temporal (`series1`), transformando-a do domínio do tempo para o domínio da frequência. `f1` é a representação da série em termos de suas frequências constituintes.\n",
+    "\n",
+    "- **`f2 = fft(series2)`**: Similar ao `f1`, aplica a FFT na segunda série temporal (`series2`).\n",
+    "\n",
+    "- **`cross_power_spectrum = (f1 * np.conjugate(f2)) / np.abs(f1 * np.conjugate(f2))`**: \n",
+    "    - **`f1 * np.conjugate(f2)`**: Calcula o espectro de potência cruzado das duas séries temporais, que é uma medida de como as frequências de `f1` e `f2` estão relacionadas.\n",
+    "    - **`np.abs(f1 * np.conjugate(f2))`**: Normaliza o espectro de potência cruzado para garantir que o resultado seja uma medida de fase pura, removendo a magnitude (amplitude).\n",
+    "    - **`cross_power_spectrum`**: O espectro de potência cruzado normalizado, usado para calcular a correlação de fase.\n",
+    "\n",
+    "- **`correlation = ifft(cross_power_spectrum)`**: Aplica a Transformada Inversa de Fourier (IFFT) ao espectro de potência cruzado, retornando ao domínio do tempo. O resultado é a correlação de fase entre as duas séries temporais.\n",
+    "\n",
+    "- **`return np.abs(correlation)`**: Retorna o valor absoluto da correlação de fase, que é uma medida de quão alinhadas estão as séries temporais em termos de suas fases.\n",
+    "\n",
+    "### Aplicar a Função em Colunas do Dataset\n",
+    "\n",
+    "- **`correlation_max = {}`** e **`correlation_min = {}`**: Inicializam dois dicionários para armazenar as correlações de fase entre as séries temporais de temperatura máxima e mínima, respectivamente, e cada uma das colunas relacionadas à vegetação.\n",
+    "\n",
+    "- **`for col in sobel_vegetation.columns:`**: Itera por todas as colunas do `sobel_vegetation`, que contém as séries temporais transformadas pelo filtro de Sobel.\n",
+    "\n",
+    "- **`correlation_max[col] = phase_correlation(dataset_completo_A305['temperatura_max_median'], dataset_completo_A305[col])`**: Calcula a correlação de fase entre a série temporal de temperatura máxima (`temperatura_max_median`) e a série da coluna atual (`col`). O resultado é armazenado no dicionário `correlation_max` sob a chave correspondente ao nome da coluna.\n",
+    "\n",
+    "- **`correlation_min[col] = phase_correlation(dataset_completo_A305['temperatura_min_median'], dataset_completo_A305[col])`**: Faz o mesmo que a linha anterior, mas para a temperatura mínima (`temperatura_min_median`). O resultado é armazenado no dicionário `correlation_min`."
    ]
   },
   {
@@ -3258,13 +3402,6 @@
     "**Água e Áreas Húmidas:**\n",
     "   - **ID 33 - Rios, lagos e oceanos:** Esses corpos d'água apresentam uma correlação moderada, sugerindo que, embora as temperaturas possam influenciar o comportamento dos corpos d'água, eles também são afetados por outros fatores, como precipitação e gestão hídrica."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
