--- a/notebooks/primeira_abordagem.ipynb
+++ b/notebooks/primeira_abordagem.ipynb
@@ -3181,7 +3181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -3206,6 +3206,16 @@
     "plt.legend()\n",
     "plt.grid(True)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Interpretação\n",
+    "\n",
+    "- O gráfico mostra como as mudanças na temperatura máxima e mínima (capturadas pelo filtro de Sobel) se comportam ao longo do tempo.\n",
+    "- Picos ou vales (valores positivos ou negativos) indicam mudanças significativas de um ano para o outro, com valores maiores indicando transições mais bruscas."
    ]
   },
   {
